--- a/Lean_LEDE_Mi-Router-4A-gigabit.config
+++ b/Lean_LEDE_Mi-Router-4A-gigabit.config
@@ -38,6 +38,14 @@ CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_v2ray=y
+CONFIG_V2RAY_COMPRESS_GOPROXY=y
+CONFIG_V2RAY_COMPRESS_UPX=y
+CONFIG_V2RAY_DISABLE_NONE=y
+CONFIG_V2RAY_EXCLUDE_ASSETS=y
+CONFIG_V2RAY_EXCLUDE_V2CTL=y
+CONFIG_V2RAY_JSON_INTERNAL=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
