--- a/Lean_LEDE_Mi-Router-4A-gigabit.config
+++ b/Lean_LEDE_Mi-Router-4A-gigabit.config
@@ -27,11 +27,9 @@ CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_luci-app-nps=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ipt2socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-i18n-nps-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_nano=y
@@ -42,13 +40,12 @@ CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_trojan=y
-CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_V2RAY_COMPRESS_GOPROXY=y
-CONFIG_V2RAY_COMPRESS_UPX=y
-CONFIG_V2RAY_DISABLE_NONE=y
-CONFIG_V2RAY_EXCLUDE_ASSETS=y
-CONFIG_V2RAY_EXCLUDE_V2CTL=y
-CONFIG_V2RAY_JSON_INTERNAL=y
+CONFIG_PACKAGE_xray=y
+CONFIG_XRAY_COMPRESS_GOPROXY=y
+CONFIG_XRAY_COMPRESS_UPX=y
+CONFIG_XRAY_DISABLE_NONE=y
+CONFIG_XRAY_EXCLUDE_EXAMPLE=y
+CONFIG_XRAY_JSON_INTERNAL=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
