--- a/Lean_LEDE_Mi-Router-4A-gigabit.config
+++ b/Lean_LEDE_Mi-Router-4A-gigabit.config
@@ -17,20 +17,16 @@ CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-slhc=y
-CONFIG_PACKAGE_libblobmsg-json=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_libelf=y
-CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libevent2=y
+CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_libustream-openssl=y
-CONFIG_PACKAGE_luci-app-nps=y
+CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-i18n-nps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_odhcp6c=y
@@ -42,8 +38,6 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_npc=y
-CONFIG_NPS_COMPRESS_UPX=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
