--- a/.github/workflows/Lean_LEDE_Xiaomi_4C.yml
+++ b/.github/workflows/Lean_LEDE_Xiaomi_4C.yml
@@ -24,8 +24,8 @@ on:
 #    types: started
 
 env:
-  REPO_URL: https://github.com/yuos-bit/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/yuos-bit/Lightweight
+  REPO_BRANCH: openwrt-18.06
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Lean_LEDE_Xiaomi_4C.config
   DIY_P1_SH: diy-part1.sh
